docs/content/v2.20/deploy/manual-deployment/install-software.md
---
title: Manual software installation
headerTitle: Install software
linkTitle: 2. Install software
description: How to manually install YugabyteDB database on each node.
menu:
  v2.20:
    identifier: deploy-manual-deployment-install-software
    parent: deploy-manual-deployment
    weight: 612
type: docs
---

Installing YugabyteDB involves completing prerequisites and downloading the YugabyteDB package.

## Prerequisites

{{% readfile "/stable/quick-start/include-prerequisites-linux.md" %}}

## Download YugabyteDB

The following instructions are for downloading the stable release of YugabyteDB, which is recommended for production deployments. For other versions, see [Releases](/stable/releases/).

{{<note title="Which release should I use?">}}
For production deployments, install a stable release.

Preview releases are recommended for development and testing only, and are not supported for production deployments. There is currently no migration path from a preview release to a stable release.
{{</note>}}

YugabyteDB supports both x86 and ARM (aarch64) CPU architectures. Download packages ending in `x86_64.tar.gz` to run on x86, and packages ending in `aarch64.tar.gz` to run on ARM.

Download and extract YugabyteDB as follows:

{{< tabpane text=true plain=true >}}

  {{% tab header="<i class='fa-brands fa-linux' aria-hidden='true'></i> x86" lang="x86" %}}

```sh
wget https://software.yugabyte.com/releases/{{< yb-version version="v2.20">}}/yugabyte-{{< yb-version version="v2.20" format="build">}}-linux-x86_64.tar.gz
echo "$(curl -L https://software.yugabyte.com/releases/{{< yb-version version="v2.20">}}/yugabyte-{{< yb-version version="v2.20" format="build">}}-linux-x86_64-tar.gz.sha) *yugabyte-{{< yb-version version="v2.20" format="build">}}-linux-x86_64.tar.gz" | shasum --check && \
tar xvfz yugabyte-{{< yb-version version="v2.20" format="build">}}-linux-x86_64.tar.gz && cd yugabyte-{{< yb-version version="v2.20">}}/
```

  {{% /tab %}}

  {{% tab header="<i class='fa-brands fa-linux' aria-hidden='true'></i> ARM" lang="aarch64" %}}

```sh
wget https://software.yugabyte.com/releases/{{< yb-version version="v2.20">}}/yugabyte-{{< yb-version version="v2.20" format="build">}}-el8-aarch64.tar.gz
echo "$(curl -L https://software.yugabyte.com/releases/{{< yb-version version="v2.20">}}/yugabyte-{{< yb-version version="v2.20" format="build">}}-el8-aarch64-tar.gz.sha) *yugabyte-{{< yb-version version="v2.20" format="build">}}-el8-aarch64.tar.gz" | shasum --check && \
tar xvfz yugabyte-{{< yb-version version="v2.20" format="build">}}-el8-aarch64.tar.gz && cd yugabyte-{{< yb-version version="v2.20">}}/
```

  {{% /tab %}}

{{< /tabpane >}}

## Configure YugabyteDB

To configure YugabyteDB, run the following shell script:

```sh
./bin/post_install.sh
```
